fix some problem

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="hint" id="hint"></div>
         <div id="marioAnimation"></div>
-        <input type="text" id="userInput" placeholder="输入你听到的单词">
+        <input type="text" id="userInput" placeholder="输入你听到的单词" autocomplete="off">
         <button id="checkBtn">检查</button>
         <div class="stats" id="stats"></div>
         <div class="result" id="result"></div>
